--- a/Final Project/AnalysisFiles/Machine Learning Python Q5.ipynb
+++ b/Final Project/AnalysisFiles/Machine Learning Python Q5.ipynb
@@ -2813,7 +2813,7 @@
    "id": "e4c94af5",
    "metadata": {},
    "source": [
-    "# This model using 1 as the neighbors count was 69% accurate in predicting the Financial Wellness Score Now will run the KNN with iterations from 1 to 40 to find the best model."
+    "# This model using 1 as the neighbors count was 67% accurate in predicting the Financial Wellness Score. Now will run the KNN with iterations from 1 to 40 to find the best model."
    ]
   },
   {
